src/test/deca/syntax/invalid/lexer/include_tests/include_bSlash.deca
// Description:
//    utilisation de \ dans le nom de fichier a include
//
// Resultats:
//    Ligne 11 : token recognition error at: '#include "\'
//
// Historique:
//    cree le 09/01/2023
//

#include "\"